--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <script>
 
-    var host = "ndqm.eu.org";
+    var host = "nduog.tk";
 
     if ((host == window.location.host) && (window.location.protocol != "https:"))
 
@@ -38,7 +38,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <meta property="og:url" content="https://nduog.tk" />
 
-  <meta property="twitter:carription" content="ndqm" /><meta property="og:site_name" content="ndqm Infomation" />
+  <meta property="twitter:carription" content="ndqm" /><meta property="og:site_name" content="nduog Infomation" />
 
   <meta property="og:title" content="nduog Infomation" />
 
