--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
             <p class="style4">Coder - Developer - Keyboarder <p>
 
-                <iframe src="https://cdn.glitch.global/c6b6a5cd-8410-4432-a350-29fcf17e4a72/y2mate.com%20-%20PC%20%2010%20Ng%C3%A0n%20N%C4%83m%20%20Prod%20Duckie%20%20Official%20Audio.mp3?v=1665810367820" allow="autoplay" style="display:none" id="iframeAudio">
+                <iframe src="https://cdn.glitch.global/c6b6a5cd-8410-4432-a350-29fcf17e4a72/y2mate.com%20-%20PC%20%2010%20Ng%C3%A0n%20N%C4%83m%20%20Prod%20Duckie%20%20Official%20Audio.mp3?v=1665810367820">
 
                 </iframe>
 
-            <audio id="playAudio" controls autoplay loop>
+            <audio id="playAudio" controls>
 
               <source src="https://cdn.glitch.global/c6b6a5cd-8410-4432-a350-29fcf17e4a72/y2mate.com%20-%20PC%20%2010%20Ng%C3%A0n%20N%C4%83m%20%20Prod%20Duckie%20%20Official%20Audio.mp3?v=1665810367820" type="audio/mpeg">
 
@@ -205,7 +205,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
               <div id="image02" class="image full" data-position="center">
 
-                <img src="https://cdn.glitch.global/c6b6a5cd-8410-4432-a350-29fcf17e4a72/3e1ba6f8c63701695826.jpg?v=1665810487432" alt="" />
+                <img src="https://github.com/minhpro1310/nduog/blob/main/avt2.jpg?raw=true" alt="" />
 
               </div>
 
