--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
             <p class="style4">SĐT: <a href="tel:0326294826">0326294826</a></p>
 
-            <p class="style4">Email: <a href="mailto:duong17092008@gmail.com"><span class="__cf_email__" data-cfemail="502125313e373d393e3861636160606910373d31393c7e333f3d">duong17092008@gmail.com</span></a></p>
+            <p class="style4">Email: <a href="mailto:duong17092008@gmail.com"><span>duong17092008@gmail.com</span></a></p>
 
             <p class="style4">Coder - Developer - Keyboarder <p>
 
